# aic_challenge_dangermark

./: README.md  act_policy_node_dm  aic.repos  pixi.toml  pixi_env_setup.sh
.devcontainer/: Dockerfile  devcontainer.json
aic_assets/models/NIC Card Mount/: model.sdf  nic_card_mount_macro.xacro
aic_assets/models/SC Port/: model.sdf  sc_port_macro.xacro
aic_assets/models/sfp_sc_cable/: model.sdf
aic_bringup/launch/: aic_gz_bringup.launch.py
aic_description/urdf/: cable.sdf.xacro  task_board.urdf.xacro
aic_description/world/: aic.sdf
aic_engine/src/: aic_engine.cpp
aic_example_policies/: README.md
aic_example_policies/aic_example_policies/ros/: CheatCode.py  GentleGiant.py  SpeedDemon.py  WallPresser.py  WallToucher.py  WaveArm.py
aic_gazebo/src/: CablePlugin.cc  CablePlugin.hh
aic_model/act_policy/: gather_data.py
aic_model/act_policy_node_dm/: package.xml  pixi.toml  setup.cfg  setup.py
aic_model/act_policy_node_dm/scripts/: CheatCodeTeleop.py  gather_data.py
aic_model/aic_model/: policy.py
aic_scoring/include/aic_scoring/: ScoringTier2.hh
aic_scoring/src/: ScoringTier2.cc
aic_utils/aic_isaac/: README.md
aic_utils/lerobot_robot_aic/lerobot_robot_aic/: __init__.py  aic_teleop.py
docker/: docker-compose.yaml
docker/acl/: generate_acl.py
docker/aic_eval/: Dockerfile  zenoh_router_config.json5
docker/aic_model/: Dockerfile
docs/: aic_controller.md  aic_interfaces.md  build_eval.md  getting_started.md  policy.md  qualification_phase.md  scene_description.md  scoring_tests.md  submission.md  zenoh_acl.md
(+3 files in other folders)
